--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <div class="container">
             <!--MENU-->
             <div class="hautdelapage">
-
+                <h1>Liste des quiz disponibles : </h1>
             </div>
             <!--LISTE DES QUIZS-->
             <div id="listquiz">
-
+                
             </div>
         </div>
     </body>
