--- a/quiz.html
+++ b/quiz.html
@@ -17,6 +17,7 @@
             <div class="quiz">
                 <p id="score">Score : 0/0 - 0%</p>
                 <p>Inverser les questions et les réponses : <input type="checkbox" id="inverser" /> (ne s'applique qu'à partir de la prochaine question)</p>
+                <p>Randomiser les inversions : <input type="checkbox" id="randominvers" /> (ne s'applique qu'à partir de la prochaine question)</p>
                 <h1 id="question">Raffraichissez la page si vous voyez ce message</h1>
                 <input type="text" id="input" placeholder="réponse" onkeypress="checkEnter(event);"/>
                 <button onclick="repondre();" id="button" >Répondre</button>
